fix(scripts): tweak fakestore package.json scripts

--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "type-check": "turbo type-check",
     "clean": "turbo clean",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "web:dev": "turbo dev --filter=web",
-    "web:build": "turbo build --filter=web",
-    "docs:dev": "turbo dev --filter=docs",
-    "docs:build": "turbo build --filter=docs",
-    "mobile:dev": "turbo dev --filter=mobile",
+    "web:dev": "turbo dev --scope=web",
+    "web:build": "turbo build --scope=web",
+    "docs:dev": "turbo dev --scope=docs",
+    "docs:build": "turbo build --scope=docs",
+    "mobile:dev": "turbo dev --scope=mobile",
+    "mobile:build": "turbo build --scope=mobile",
     "mobile:android": "pnpm --filter mobile run android",
     "mobile:ios": "pnpm --filter mobile run ios",
     "mobile:web": "pnpm --filter mobile run web",
