--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "dev": "expo start --clear",
     "start": "expo start",
+    "build": "echo \" //TODO: add mobile build \"",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo start --android",
     "ios": "expo start --ios",
