--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,25 +7,31 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "test": "vitest run --coverage"
   },
   "dependencies": {
+    "@fakestore/ui": "workspace:*",
     "next": "^14.1.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@fakestore/ui": "workspace:*"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@fakestore/eslint-config": "workspace:*",
+    "@fakestore/tailwind-config": "workspace:*",
+    "@fakestore/typescript-config": "workspace:*",
     "@next/eslint-plugin-next": "^14.1.1",
+    "@testing-library/react": "^15.0.7",
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
+    "@vitejs/plugin-react": "^4.2.1",
+    "@vitest/coverage-v8": "^1.6.0",
     "autoprefixer": "^10.4.18",
-    "@fakestore/eslint-config": "workspace:*",
+    "jsdom": "^24.0.0",
     "postcss": "^8.4.35",
-    "@fakestore/tailwind-config": "workspace:*",
     "tailwindcss": "^3.4.1",
-    "@fakestore/typescript-config": "workspace:*",
-    "typescript": "<=5.3.3"
+    "typescript": "<=5.3.3",
+    "vitest": "^1.6.0"
   }
 }
