--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@fakestore/ui": "workspace:*",
     "next": "^14.1.1",
+    "next-auth": "5.0.0-beta.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
