--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "lint": "eslint . --max-warnings 0",
+    "lint": "eslint . --fix",
     "dev": "tailwindcss -i ./styles/globals.css -o ./dist/globals.css --watch",
     "build": "tailwindcss -i ./styles/globals.css -o ./dist/globals.css",
     "ui:add": "pnpm dlx shadcn-ui@latest add"
