--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@fakestore/ui": "workspace:*",
+    "lucide-react": "^0.294.0",
     "next": "^14.1.1",
     "next-auth": "5.0.0-beta.18",
     "react": "^18.2.0",
