--- a/turbo.json
+++ b/turbo.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://turbo.build/schema.json",
   "globalDependencies": ["**/.env.*local"],
-  "globalEnv": ["AUTH_SECRET", "NEXT_PUBLIC_API_URL"],
+  "globalEnv": ["AUTH_SECRET", "NEXT_PUBLIC_API_URL", "NEXTAUTH_URL"],
   "pipeline": {
     "build": {
       "dependsOn": ["^build"],
@@ -16,6 +16,7 @@
     },
     "clean": {
       "cache": false
-    }
+    },
+    "start": {}
   }
 }
